
package ec.ed.espe.chickenfarmsimulator.model;

/**
 *
 * @author Brandon Pazmino
 */
public class Poop {
    
}
